--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,6 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+# command to run tests
+script:
+  - pytest
