--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,8 @@ python:
   - "nightly" # nightly build
 # command to install dependencies
 install:
-  - curl -L https://github.com/google/protobuf/releases/download/v3.11.4/protoc-3.11.4-linux-x86_64.zip -o /tmp/protoc.zip
-  - unzip /tmp/protoc.zip -d "$HOME"/protoc
-  - mkdir -p "$HOME"/src && ln -s "$HOME"/protoc "$HOME"/src/protobuf
+  - sudo apt-get install autoconf automake libtool curl make g++ unzip
+  - sudo apt-get install protobuf-compiler
   - make setup
   - source ./activate
 script:
