--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,11 @@ python:
   - "nightly" # nightly build
 # command to install dependencies
 install:
-  - sudo apt-get install autoconf automake libtool curl make g++ unzip
-  - sudo apt-get install protobuf-compiler
+  - PROTOC_ZIP=protoc-3.7.1-linux-x86_64.zip
+  - curl -OL https://github.com/protocolbuffers/protobuf/releases/download/v3.7.1/$PROTOC_ZIP
+  - sudo unzip -o $PROTOC_ZIP -d /usr/local bin/protoc
+  - sudo unzip -o $PROTOC_ZIP -d /usr/local 'include/*'
+  - rm -f $PROTOC_ZIP
   - make setup
   - source ./activate
 script:
